rust_writer_procedural/tests/ui/parse_attrs_fails_if_no_implementor.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator]
struct SomeStruct;

fn main() {}
